<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/colorBackground"
    tools:context="com.angryscarf.contacts.EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/img_edit_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_account_circle"
                android:layout_gravity="center_horizontal"
                />
            <ImageView
                android:id="@+id/img_edit_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite"

                android:layout_marginTop="8dp" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/edit_phone_number"/>

            <EditText
                android:id="@+id/edit_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/edit_phone_hint"
                android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/edit_name"/>

            <EditText
                android:id="@+id/edit_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/edit_name_hint"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/edit_last_name"/>

            <EditText
                android:id="@+id/edit_edit_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/edit_lastname_hint"
                android:inputType="textCapWords"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/edit_id"/>

            <EditText
                android:id="@+id/edit_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/edit_id_hint"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/edit_email"/>

            <EditText
                android:id="@+id/edit_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/edit_email_hint"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/edit_address"/>

            <EditText
                android:id="@+id/edit_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/edit_address_hint"
                android:inputType="textCapSentences"/>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_edit_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_save_button"
        android:textColor="@color/primaryTextColor"
        android:background="@color/primaryLightColor"
        android:layout_gravity="center_horizontal"
        android:onClick="saveContact"/>


</LinearLayout>
